# dre

./: .gitmodules  CMakeLists.txt  README.md  THIRDPARTY_LICENSE  dre.pro  flatsrc.pri  formdesign.cpp  formdesign.h  formeditorproperty1.pro  ikons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  manystructuiobjectparam.cpp  tabwidgetutama.cpp  tabwidgetutama.h  tools_build.pri  ui_build.pri
app/: CMakeLists.txt  app.pro  dre_resource.rc  formdesign.cpp  formdesign.h  formdesign.ui  ikons.qrc  mainwindow.h  mainwindow.ui  manystructuiobjectparam.h
app/assets/: template_report.report
app/baseview/: sceneview.cpp  sceneview.h
app/delegates/: propertyedititemdelegate.cpp
app/delegates/propertyeditor/: imagefilesetpropertyeditor.cpp  imagefilesetpropertyeditor.ui
app/itemShapeBases/: itemshapebase.cpp  itemshapeinclude.pri
app/items/: baseallitems.cpp  imageitem.cpp  lineitem.h  textitem.h
baseview/: baseview.cpp  baseview.h  sceneview.cpp  sceneview.h  undocommand.cpp  undocommand.h
delegates/: propertyedititemdelegate.cpp  propertyedititemdelegate.h
delegates/propertyeditor/: imagefilesetpropertyeditor.cpp  imagefilesetpropertyeditor.h  utiljsonstringproperty.cpp  utiljsonstringproperty.h
itemShapeBases/: constvalue.h  itemshapebase.cpp  itemshapebase.h  itemshapebase_global.h  itemshapeinclude.pri
items/: baseallitems.cpp  baseallitems.h  customitemkotak.cpp  customitemkotak.h  customobyek.cpp  customobyek.h  ellipseitem.h  handlerpointerruler.cpp  handlerpointerruler.h  imageitem.cpp  imageitem.h  lineitem.cpp  lineitem.h  pageitem.cpp  pageitem.h  rectangleitem.cpp  rectangleitem.h  ruleritem.cpp  ruleritem.h  selectionlineitemhandler.cpp  selectionlineitemhandler.h  selectionmarkerhandlebase.cpp  selectionmarkerhandlebase.h  textitem.cpp  textitem.h  triangleitem.cpp  triangleitem.h
lib/items/: CMakeLists.txt  baseskitem.cpp  baseskitem.h  constvalue.h  ellipseitem.cpp  handlerpointerruler.h  imageitem.h  itemshapebase.cpp  pageitem.h  rectangleitem.cpp
tools/: CMakeLists.txt  main.cc  main.cpp  serverhandler.cpp  serverhandler.h  tools.pro
